--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <input id="timePerCycle" type="number" min="1" />
     </label>
     <label>
-      Number of cycles:<br/>
+      Number of cycles to be completed:<br/>
       <input id="totalCycles" type="number" min="1" />
     </label>
     <button onclick="startTracker(true)">Start</button>
