--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div id="setupScreen" class="screen active">
     <h1>Set Up</h1>
     <label>
-      Time per part (seconds):<br/>
+      Cycle time per part (seconds):<br/>
       <input id="timePerCycle" type="number" min="1" />
     </label>
     <label>
